--- a/demo-deployment.yaml
+++ b/demo-deployment.yaml
@@ -15,22 +15,23 @@ spec:
       namespace: default
       labels:
         app: demo-deployment
-    containers:
-      - name: demo-deployment
-        image: docker saisatyateja/studentcourserestapi:1.0
-        ports:
-          - containerPort: 8080
-        livenessProbe:
-          httpGet:
-            port: 8080
-        readinessProbe:
-          httpGet:
-            port: 8080
-        resources:
-          requests:
-            cpu: "1000m"
-            memory: "300Mi"
-          limits:
-            cpu: "1500m"
-            memory: "600Mi"
-        nodeName: node2
+    spec:
+      containers:
+        - name: demo-deployment
+          image: docker saisatyateja/studentcourserestapi:1.0
+          ports:
+            - containerPort: 8080
+          livenessProbe:
+            httpGet:
+              port: 8080
+          readinessProbe:
+            httpGet:
+              port: 8080
+          resources:
+            requests:
+              cpu: "1000m"
+              memory: "300Mi"
+            limits:
+              cpu: "1500m"
+              memory: "600Mi"
+          nodeName: node2
