--- a/demo-deployment.yaml
+++ b/demo-deployment.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: demo-deployment
-          image: docker saisatyateja/studentcourserestapi:1.0
+          image: saisatyateja/studentcourserestapi:1.0
           ports:
             - containerPort: 8080
           livenessProbe:
